src/scss/_main.scss
/* =========================================
	Variables & Global Configuration
   ========================================= */
:root {
	accent-color: var(--two);
	--focus-outline-color: var(--two);
	scrollbar-color: var(--two) var(--one);

	font-family: 'Roboto Mono';
	color: var(--two);

	&::selection {
		background: var(--two);
		color: var(--one);
	}

	&:has(body[data-bg-dots="false"]) {
		--dot-bg: none;
	}

	--dot-bg: radial-gradient(var(--dot) 1px, #0000 1px);
	--dot-size: 24px 24px;
}

/* =========================================
	Base Elements
   ========================================= */
html,
body {
	height: 100%;
	background-color: var(--one);
	background-image: var(--dot-bg);
	background-size: var(--dot-size);
	background-attachment: fixed;
	color: var(--two);
	scrollbar-gutter: stable;
}

input,
select {
	background-color: var(--one);
	border: none;
	border-color: transparent;
}

button {
	background: transparent;
	border: none;
	opacity: 0.75;

	&:hover{
		opacity: 1;
	}
}

/* =========================================
	Main Layout & Notepad Area
   ========================================= */
div#appWrapper {
	display: block !important;
	height: 100%;
}

.app-container {
	display: grid;
	gap: 0.5rem;
	height: 100%;
	align-content: start;
	justify-items: center;
	grid-template-rows: 1fr;
}

main#appMain {
	display: grid;
	width: min(1170px, 100%);
}

.notepad-textarea,
.notepad-preview {
	background: transparent;
	border: none;
	margin-inline: auto;
	outline: none;
	resize: none;
	padding: 2rem 1rem 5rem;

	&::placeholder{
		color: currentColor;
		opacity: 0.5;
	}
}

/* =========================================
	App Header & Footer
   ========================================= */
header.app-header {
	padding: 0.4rem 0.6rem;
	position: fixed;
	width: auto;
	right: 1rem;
	background-color: var(--one);
	background-image: var(--dot-bg);
	background-size: var(--dot-size);
	background-attachment: fixed;
	transition: opacity .25s;

	button {
		background: transparent;
		border: none;
		padding: 0 0.5rem;
	}
}

footer.app-footer {
	position: fixed;
	bottom: 0;
	right: 1rem;
	background-color: var(--one);
	padding: 0.2rem;
	background-image: var(--dot-bg);
	background-size: var(--dot-size);
	background-attachment: fixed;
	pointer-events: none;
	font-size: 0.8rem;
	transition: opacity .25s;
}

div#appWrapper.active footer.app-footer:not(:hover),
div#appWrapper.active header.app-header:not(:hover) {
	opacity: 0.1;
	transition: opacity 0s;
}

/* =========================================
	Overlays: Modals & Toasts
   ========================================= */
/* Base Dialog Styles */
dialog {
	background-color: var(--one);
	border-color: var(--two);
	border-width: 4px;
	color: var(--two);
	padding: 0 0 1rem;

	&::backdrop {
		background-color: #0000001f;
	}

	.modal-content {
		display: grid;
		grid-template-rows: auto 1fr auto;
		height: 100%;

		.modal-header {
			display: flex;
			align-items: center;
			justify-content: space-between;
			flex-wrap: wrap;
			gap: 1rem;
			background-color: var(--two);
			color: var(--one);
			padding-bottom: 4px;

			h2 {
				margin-right: auto;
				font-size: 1rem;
				font-weight: 400;
				line-height: 1;
			}

			#btnCloseSettings,
			#btnCloseSnapshots{
				font-size: 1.75rem;
			}
		}
	}
}

/* Specific Modal: Settings */
dialog#modalSettings {
	width: min(700px, 100%);
	height: min(850px, 100%);

	.settings-wrap {
		display: flex;
		gap: 0.7rem;
		font-size: clamp(0.9rem, 0.3074rem + 2.963vw, 1.5rem);
		padding: 2rem 1rem 1rem;
		overflow: auto;
		min-height: 100%;
		flex-direction: column;
		overscroll-behavior: contain;
	}

	.setting-group {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
		align-items: center;
		border-bottom: 1px dashed var(--dot);
		padding-bottom: 1rem;

		div{
			display: flex;
		}
	}

	.btn-install{
		margin-top: auto;
		padding-top: 1rem;
	}

	input,
	select {
		text-align: right;
		line-height: 0;
	}
}

/* Specific Modal: Snapshots */
dialog#modalSnapshots {
	width: min(900px, 100%);
	height: min(900px, 100%);

	.modal-header {
		justify-content: flex-end;
		gap: 0 0.5rem;
	}
	
	.snapshots-top-btns{
		display: flex;
		align-items: center;

		button{
			line-height: 1;
		}

		span{
			opacity: 0.4;
			pointer-events: none;
		}
	}

	ul#snapshotList {
		padding: 1rem;
		display: grid;
		align-content: start;
		gap: 1rem;
		margin-top: 0.75rem;
		overflow: auto;
		overscroll-behavior: contain;
	}

	li.snapshot-item {
		display: flex;
		gap: 1rem;
		justify-content: space-between;
		border-bottom: 1px dashed var(--dot);
		padding-bottom: 1rem;
	}

	.snapshot-info {
		display: grid;
		gap: .75rem;
	}

	.snapshot-bottom-bar{
		display: flex;
		align-items: center;
		font-size: 0.9rem;

		& > * {
			opacity: 0.55;
		}

		button:hover{
			opacity: 1;
		}
	}

	p.snapshot-date {
		margin-right: auto;
		padding-right: 0.5rem;
	}

	span.snapshot-snippet {
		font-size: 1.3rem;
		line-height: 1.2;
	}
}

/* Toast Notification */
div#toast {
	display: none;
	position: fixed;
	padding: 0.2rem 0.7rem;
	top: 2.4rem;
	right: 1rem;
	background-image: radial-gradient(var(--dot) 1px, rgba(0, 0, 0, 0) 1px);
	color: var(--one);
	background-color: var(--two);
	line-height: 1;
}

/* =========================================
	State Overrides
   ========================================= */
/* Picture in picture / Floating Window */
body.is-floating-window {

	header.app-header,
	footer.app-footer {
		display: none;
	}

	main#appMain {
		width: 100%;
	}
}

.hidden {
	display: none !important;
}


/* =========================================
	Markdown
   ========================================= */
.notepad-preview {
	max-width: 100%;
	overflow: auto;
}

pre {
	background-color: var(--dot);
	color: var(--one);
	overflow: auto;
	display: block;
	padding: 1rem;
}

code {
	padding: 0rem 0.5rem;
	background-color: var(--two);
	color: var(--one);
}

pre > code {
    padding: 0;
	background-color: transparent;
	color: var(--two);
}

table {
	border-collapse: collapse;
	margin-bottom: 1rem;
}

th,
td {
	border: 1px solid var(--two);
	padding: 0.25em 0.5em;
	text-align: left;
}

th {
	font-weight: bold;
}

blockquote {
    border-left: 5px solid;
    margin: 0;
    padding-left: 1em;
}

hr {
    border-color: var(--two);
}

